// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prw: Token codeblocks.prw 1`] = `
codeblocks.prw
line 0 (column 0): 
-------------------^
Can't start parsing from rule "start_token".

`;

exports[`prw: Token operators.prw 1`] = `
operators.prw
line 0 (column 0): 
-------------------^
Can't start parsing from rule "start_token".

`;
